--- a/CIBuild/CIBuild/packages.config
+++ b/CIBuild/CIBuild/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="Noksa.NUnit.Allure" version="2.5.0.1" targetFramework="net461" />
   <package id="NUnit" version="3.11.0" targetFramework="net461" />
   <package id="Selenium.Support" version="3.14.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.14.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.43.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
